; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-transitions/extr_transition-stinger.c_mix_a_fade_in_out.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-transitions/extr_transition-stinger.c_mix_a_fade_in_out.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stinger_info = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (i8*, float)* @mix_a_fade_in_out to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @mix_a_fade_in_out(i8* %0, float %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca float, align 4
  %5 = alloca %struct.stinger_info*, align 8
  store i8* %0, i8** %3, align 8
  store float %1, float* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.stinger_info*
  store %struct.stinger_info* %7, %struct.stinger_info** %5, align 8
  %8 = load float, float* %4, align 4
  %9 = load %struct.stinger_info*, %struct.stinger_info** %5, align 8
  %10 = getelementptr inbounds %struct.stinger_info, %struct.stinger_info* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call float @calc_fade(float %8, i32 %11)
  %13 = fsub float 1.000000e+00, %12
  ret float %13
}

declare dso_local float @calc_fade(float, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
